Work in progress port to 1.21
- Added new method for CurrencyHelper to create TradedItems
- Money Bags needs to migrate to Data Components from KeyedEndecs
- Villager Reputation overwrite uses Codecs and is moved. Requires reworking
- Suspicious stew is dubious, needs reworking
- Both Enchantment adapters needs a full rewrite